# ETL_WEATHER_PROJECT

./: README.md  docker-compose.yml  init_db.sql  pyproject.toml  requirements.txt
dags/: S3Handler.py  secretkey.py  smartenergy.py  weather_etl.py
